fix some bugs, configure hyprlock, hyprshot, colors and some other things

--- a/systemcolors/colors.css
+++ b/systemcolors/colors.css
@@ -1,4 +1,4 @@
-@define-color background #16161D;
-@define-color foreground #DCD7BA;
+@define-color background #006175;
+@define-color foreground #8aebff;
 @define-color selection #363647;
-@define-color foreground-dark #C8C093;
+@define-color foreground-dark #72c3d4;
