update the theming, fixing other bugs

--- a/systemcolors/colors.css
+++ b/systemcolors/colors.css
@@ -1,4 +1,4 @@
-@define-color background #006175;
+@define-color background #363647;
 @define-color foreground #8aebff;
-@define-color selection #363647;
 @define-color foreground-dark #72c3d4;
+@define-color inactive #3b6770;
