--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,6 +5,28 @@
 		"JetBrainsMono Nerd Font";
 }
 
+
+
+tooltip {
+	color: @foreground;
+	background-color: @background;
+	font-weight: 800;
+}
+
+
+
+#custom-archlogo {
+	font-weight: 800;
+	font-size: 2.2em;
+	border-radius: 10px;
+	color: @foreground;
+	background-color: @background;
+	padding: 0px 17px 0px 10px;
+	margin-left: 15px;
+}
+
+
+
 window#waybar {
 	background-color: transparent;
 	transition-property: background-color;
@@ -18,12 +40,12 @@ window#waybar > box {
 
 #workspaces {
 	font-weight: 800;
-	margin-right: 15px;
-	margin-left: 15px;
+	margin-right: 5px;
+	margin-left: 5px;
 	font-size: 1.2em;
 	background-color: transparent;
-	color: @foreground;
-	border-radius: 10px;
+	color: @inactive;
+	border-radius: 5px;
 }
 
 #workspaces button{
@@ -40,18 +62,14 @@ window#waybar > box {
 }
 
 #workspaces button:hover{
-	background-color: @selection;
 	border-color: transparent;
+	color: @foreground-dark;
 }
 
 #workspaces button.active {
-	background-color: @foreground-dark;
-	color: @background;
+	color: @foreground;
 }
 
-#workspaces button.active:hover {
-    background-color: @selection; /* Ou qualquer outra cor que você queira para o hover */
-}
 
 #workspaces button:last-child {
 	border-radius: 0px 10px 10px 0px; 
@@ -84,8 +102,22 @@ window#waybar > box {
 	font-size: 1.2em;
 }
 
+
+
+#custom-wttrbar {
+	font-weight: 600;
+	padding: 10px 15px;
+	color: @foreground;
+	background-color: @background;
+	border-radius: 10px;
+	font-size: 1.2em;
+}
+
+
+
+
 #time {
-	font-weight: 800;
+	font-weight: 600;
 	font-size: 1.2em;
 	border-radius: 10px;
 	color: @foreground;
@@ -93,20 +125,61 @@ window#waybar > box {
 }
 
 #clock.date {
-	color: @background;
-	background-color: @foreground-dark;
 	border-radius: 10px 0 0 10px;
-	padding: 10px 15px;
+	padding: 10px 8px 10px 15px;
+	background-color: @background;
+	color: @foreground;
 }
 
 #clock {
-	padding: 10px 15px;
+	padding: 10px 15px 10px 7px;
 	border-radius: 0 10px 10px 0;
 	background-color: @background;
 }
 
+
+
+
+#connections {
+	margin-left: 5px;
+	margin-right: 5px;
+	font-weight: 600;
+	border-radius: 10px;
+	color: @foreground;
+	background-color: transparent;
+	font-size: 1em;
+}
+
+#bluetooth {
+	color: @foreground;
+	background-color: @background;
+	padding: 10px 12px 10px 15px;
+	border-radius: 10px 0 0 10px;
+	font-size: 1.2em;
+	transition: 0.2s ease-out;
+}
+
+#bluetooth:hover {
+	color: @inactive;
+}
+
+#network.state {
+	color: @foreground;
+	background-color: @background;
+	padding: 5px 22px 5px 10px;
+	border-radius: 0 10px 10px 0;
+	font-size: 1.3em;
+	transition: 0.2s ease-out;
+}
+
+#network.state:hover {
+	color: @inactive
+}
+
+
+
 #audio {
-	font-weight: 800;
+	font-weight: 600;
 	font-size: 1.2em;
 	border-radius: 10px;
 	color: @foreground;
@@ -116,23 +189,34 @@ window#waybar > box {
 #pulseaudio.audio {
 	border-radius: 10px 0 0 10px;
 	padding: 10px 20px 10px 10px;
+	transition: 0.2s ease-out;
+}
+
+#pulseaudio.audio:hover {
+	color: @inactive;
 }
 
 #wireplumber {
-	background-color: @foreground-dark;
-	color: @background;
-	padding: 10px 15px;
+	color: @foreground;
+	padding: 10px 15px 10px 8px;
 	border-radius: 0 10px 10px 0;
+	transition: 0.2s ease-out;
+}
+
+#wireplumber:hover {
+	color: @inactive;	
 }
 
 #wireplumber.muted {
-	padding: 10px 16px 10px 14px;
+	padding: 10px 16px 10px 7px;
 }
+
+
 
 #system {
 	margin-left: 5px;
 	margin-right: 5px;
-	font-weight: 800;
+	font-weight: 600;
 	font-size: 1.2em;
 	border-radius: 10px;
 	color: @foreground;
@@ -148,31 +232,9 @@ window#waybar > box {
 }
 
 
-#connections {
-	margin-left: 5px;
-	margin-right: 5px;
-	font-weight: 800;
-	border-radius: 10px;
-	color: @foreground;
-	background-color: transparent;
-	font-size: 1em;
-}
 
-#network.state {
-	color: @background;
-	background-color: @foreground-dark;
-	padding: 5px 22px 5px 12px;
-	border-radius: 0 10px 10px 0;
-	font-size: 1.3em;
-}
 
-#bluetooth {
-	color: @foreground;
-	background-color: @background;
-	padding: 10px 15px;
-	border-radius: 10px 0 0 10px;
-	font-size: 1.2em;
-}
+
 
 #battery {
 	color: @foreground;
@@ -180,7 +242,7 @@ window#waybar > box {
 	padding: 10px 15px;
 	transition: 0.35s ease-out;
 	font-size: 1.2em;
-	font-weight: 800;
+	font-weight: 600;
 	border-radius: 10px;
 }
 
@@ -199,12 +261,12 @@ window#waybar > box {
 	background-color: @background;
 	padding: 10px 19px 10px 15px;
 	margin-right: 15px;
-	transition-property: background-color;
-	transition-duration: 0.35s;
+	transition-property: color;
+	transition-duration: 0.2s;
 }
 
 #custom-power:hover {
-	background-color: @selection;
+	color: @inactive;
 }
 
 #custom-power:not(:hover) {
