update number fodase

--- a/swaync/style.css
+++ b/swaync/style.css
@@ -1,3 +1,6 @@
+@import "/home/theo/.config/systemcolors/colors.css";
+
+
 :root {
   --cc-bg: rgba(46, 46, 46, 0.7);
   --noti-border-color: rgba(255, 255, 255, 0.15);
@@ -15,11 +18,12 @@
   --notification-app-icon-size: calc(var(--notification-icon-size) / 3);
   --notification-group-icon-size: 32px;
   --border: 1px solid var(--noti-border-color);
-  --border-radius: 12px;
+  --border-radius: 10px;
   --notification-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3),
     0 1px 3px 1px rgba(0, 0, 0, 0.7), 0 2px 6px 2px rgba(0, 0, 0, 0.3);
   --font-size-body: 15px;
   --font-size-summary: 16px;
+  --font-weight: 600;
   /* Deprecated variables (because of their typos). Keeeping them around for backwards compatibility. */
   --hover-tranistion: background 0.15s ease-in-out;
   --group-collapse-tranistion: opacity 400ms ease-in-out;
@@ -45,6 +49,11 @@
 notificationwindow, blankwindow, blankwindow {
   background: transparent;
 }
+
+* {
+  font-family: "JetBrainsMono Nerd Font";
+}
+
 
 .close-button {
   /* The notification Close Button */
@@ -85,9 +94,10 @@ notificationwindow, blankwindow, blankwindow {
   /* The actual notification */
   border-radius: var(--border-radius);
   border: var(--border);
-  padding: 0;
+  padding: 5px;
   transition: var(--hover-tranistion);
-  background: rgba(var(--noti-bg), var(--noti-bg-alpha));
+  background: @background;
+  color: @foreground;
 }
 
 .notification-row .notification-background .notification.low {
@@ -116,7 +126,6 @@ notificationwindow, blankwindow, blankwindow {
 
 .notification-row .notification-background .notification .notification-default-action:hover {
   -gtk-icon-filter: none;
-  background: var(--noti-bg-hover);
 }
 
 .notification-row .notification-background .notification .notification-default-action:not(:only-child) {
@@ -156,9 +165,10 @@ notificationwindow, blankwindow, blankwindow {
 .notification-row .notification-background .notification .notification-default-action .notification-content .text-box .summary {
   /* Notification summary/title */
   font-size: var(--font-size-summary);
-  font-weight: bold;
+  font-weight: var(--font-weight);
   background: transparent;
-  color: var(--text-color);
+  padding: 10px;
+  color: @foreground;
   text-shadow: none;
 }
 
@@ -175,9 +185,10 @@ notificationwindow, blankwindow, blankwindow {
 .notification-row .notification-background .notification .notification-default-action .notification-content .text-box .body {
   /* Notification body */
   font-size: var(--font-size-body);
-  font-weight: normal;
+  font-weight: var(--font-weight);
   background: transparent;
-  color: var(--text-color);
+  padding: 10px 10px;
+  color: @foreground-dark;
   text-shadow: none;
 }
 
