--- a/waybar/style.css
+++ b/waybar/style.css
@@ -138,7 +138,40 @@ window#waybar > box {
 }
 
 
+/* 
+ *       Right side widgets
+ */
 
+ /*--------------------- SPOTIFY DRAWER ------------------------*/
+
+#music {
+	background-color: @background;
+	border-radius: 10px;
+	margin-left: 5px;
+}
+
+#custom-spotify-logo, #custom-title-text {
+	font-weight: 800;
+	font-size: 1.2em;
+	color: @foreground;
+	transition-property: color;
+	transition-duration: 0.2s;
+	padding: 0px 0px 0px 10px;
+}
+#custom-title-text{
+	font-size: 0.8em;
+}
+
+#custom-spotify-logo {
+	padding: 10px 20px 10px 15px;
+}
+
+#custom-spotify-logo:hover {
+	color: @inactive;
+}
+
+
+ /*--------------------- CONNECTIONS ------------------------*/
 
 #connections {
 	margin-left: 5px;
@@ -176,7 +209,7 @@ window#waybar > box {
 	color: @inactive
 }
 
-
+/*--------------------- AUDIO ------------------------*/
 
 #audio {
 	font-weight: 600;
@@ -211,7 +244,7 @@ window#waybar > box {
 	padding: 10px 16px 10px 7px;
 }
 
-
+/*--------------------- SYSTEM ------------------------*/
 
 #system {
 	margin-left: 5px;
@@ -231,10 +264,7 @@ window#waybar > box {
 	padding: 10px 20px 10px 5px;
 }
 
-
-
-
-
+/*--------------------- BATTERY ------------------------*/
 
 #battery {
 	color: @foreground;
@@ -251,6 +281,7 @@ window#waybar > box {
 	background-color: @foreground-dark;
 }
 
+/*--------------------- POWER ------------------------*/
 
 #custom-power {
 	margin-left: 5px;
@@ -280,4 +311,26 @@ window#waybar > box {
 	color: @foreground;
 	background-color: @background;
 	padding: 10px 19px 10px 15px;
+}
+
+/*--------------------- POWER DRAWER ------------------------*/
+
+#group-power {
+	background-color: @background;
+	border-radius: 10px;
+	margin-right: 15px;
+	margin-left: 5px;
+}
+
+#custom-power2, #custom-quit, #custom-lock, #custom-reboot {
+	font-weight: 800;
+	font-size: 1.2em;
+	color: @foreground;
+	transition-property: color;
+	transition-duration: 0.2s;
+	padding: 0px 19px 0px 15px;
+}
+
+#custom-power2:hover , #custom-quit:hover, #custom-lock:hover, #custom-reboot:hover {
+	color: @inactive;
 }
